# top-view-grounded-height-verification

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/package_drawings/: README.md  image_manifest.csv  image_manifest.json
data/tasks/dimension_extraction/: cases.json  ground_truth.json  prompt.md
data/tasks/direct_extraction/: cases.json  ground_truth.json
data/tasks/top_view_detection/: cases.json  ground_truth.json  prompt.md
scripts/: build_report.py  import_other_repo_dataset.py  run_full_analysis.py  run_pipeline.py  stage1_build_evidence_bundle.py  stage1_run_all.py  stage1_run_dimension_extraction.py  stage1_run_direct_extraction.py  stage1_run_top_view_detection.py
spec/: README.md
spec/implementation/: architecture-overview.md  core-common-utilities.md  data-and-task-contracts.md  pipeline-reporting-scripts.md  stage1.md  stage2.md  stage3.md
spec/paper-intent/: paper-statement.md  problem-framing-and-claims.md  result-interpretation-and-metrics.md  stage1-low-level-evidence.md  stage2-height-evidence.md  stage3-answer-screening.md
src/top_view_grounded_height_verification/: __init__.py  pipeline.py  reporting.py
src/top_view_grounded_height_verification/common/: __init__.py  io_utils.py  providers.py
src/top_view_grounded_height_verification/core/: __init__.py  geometry.py  (+1 more)
tests/: helpers.py  test_dataset_integrity.py  test_pipeline.py  test_reporting.py  test_stage1_ollama_provider.py  test_stage2_audit.py  test_stage2_fusion.py  test_stage2_height_evidence.py  test_stage3_height_screening.py
(+18 files in other folders)
